adding invoice line management and invoice selector
