# FactureManagerAPI/api/swagger.yaml
@@ -19,8 +19,8 @@ tags:
   description: "gestion des customers"
 - name: "invoice"
   description: "gestion des invoices"
-- name: "ligne"
-  description: "gestion des lignes de invoice"
+- name: "line"
+  description: "gestion des lines de invoice"
 - name: "product"
   description: "gestion des products"
 schemes:
@@ -383,13 +383,13 @@ paths:
         - "write:invoices"
         - "read:invoices"
       x-swagger-router-controller: "Invoice"
-  /ligne:
+  /line:
     post:
       tags:
-      - "ligne"
-      summary: "Ajoute une nouvelle ligne"
+      - "line"
+      summary: "Ajoute une nouvelle line"
       description: ""
-      operationId: "addLigne"
+      operationId: "addLine"
       consumes:
       - "application/json"
       - "application/xml"
@@ -399,7 +399,7 @@ paths:
       parameters:
       - in: "body"
         name: "body"
-        description: "description d'une ligne à ajouter a la base de données"
+        description: "description d'une line à ajouter a la base de données"
         required: true
         schema:
           $ref: "#/definitions/body_line"
@@ -408,15 +408,15 @@ paths:
           description: "Invalid input"
       security:
       - facturation_auth:
-        - "write:lignes"
-        - "read:lignes"
-      x-swagger-router-controller: "Ligne"
+        - "write:lines"
+        - "read:lines"
+      x-swagger-router-controller: "Line"
     put:
       tags:
-      - "ligne"
-      summary: "Met à jour un ligne existant"
+      - "line"
+      summary: "Met à jour un line existant"
       description: ""
-      operationId: "updateLigne"
+      operationId: "updateLine"
       consumes:
       - "application/json"
       - "application/xml"
@@ -426,7 +426,7 @@ paths:
       parameters:
       - in: "body"
         name: "body"
-        description: "description d'un ligne à ajouter a la base de données"
+        description: "description d'un line à ajouter a la base de données"
         required: true
         schema:
           $ref: "#/definitions/body_line"
@@ -434,28 +434,33 @@ paths:
         400:
           description: "Invalid ID supplied"
         404:
-          description: "Ligne not found"
+          description: "Line not found"
         405:
           description: "Validation exception"
       security:
       - facturation_auth:
-        - "write:lignes"
-        - "read:lignes"
-      x-swagger-router-controller: "Ligne"
-  /ligne/{ligneId}:
+        - "write:lines"
+        - "read:lines"
+      x-swagger-router-controller: "Line"
+  /customer/{customerId}/product/{productId}/line:
     get:
       tags:
-      - "ligne"
-      summary: "Find ligne by ID"
-      description: "Returns a single ligne"
-      operationId: "getLigneById"
+      - "line"
+      summary: "add a product fee line for the current invoice of customer passed in parameters"
+      description: "add a product fee line for the current invoice of customer passed in parameters"
+      operationId: "addLineForProductAndCustomer"
       produces:
       - "application/xml"
       - "application/json"
       parameters:
-      - name: "ligneId"
+      - name: "customerId"
         in: "path"
-        description: "ID of ligne to return"
+        description: "ID of customer"
+        required: true
+        type: "string"
+      - name: "productId"
+        in: "path"
+        description: "ID of product"
         required: true
         type: "string"
       responses:
@@ -466,25 +471,53 @@ paths:
         400:
           description: "Invalid ID supplied"
         404:
-          description: "Ligne not found"
+          description: "Customer not found"
       security:
       - api_key: []
-      x-swagger-router-controller: "Ligne"
+      x-swagger-router-controller: "Line"
+  /line/{lineId}:
+    get:
+      tags:
+      - "line"
+      summary: "Find line by ID"
+      description: "Returns a single line"
+      operationId: "getLineById"
+      produces:
+      - "application/xml"
+      - "application/json"
+      parameters:
+      - name: "lineId"
+        in: "path"
+        description: "ID of line to return"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/line_response_200"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Line not found"
+      security:
+      - api_key: []
+      x-swagger-router-controller: "Line"
     post:
       tags:
-      - "ligne"
-      summary: "Updates a ligne in the store with form data"
+      - "line"
+      summary: "Updates a line in the store with form data"
       description: ""
-      operationId: "updateLigneWithForm"
+      operationId: "updateLineWithForm"
       consumes:
       - "application/x-www-form-urlencoded"
       produces:
       - "application/xml"
       - "application/json"
       parameters:
-      - name: "ligneId"
+      - name: "lineId"
         in: "path"
-        description: "ID of ligne that needs to be updated"
+        description: "ID of line that needs to be updated"
         required: true
         type: "string"
       - name: "invoiceId"
@@ -510,15 +543,15 @@ paths:
           description: "Invalid input"
       security:
       - facturation_auth:
-        - "write:lignes"
-        - "read:lignes"
-      x-swagger-router-controller: "Ligne"
+        - "write:lines"
+        - "read:lines"
+      x-swagger-router-controller: "Line"
     delete:
       tags:
-      - "ligne"
-      summary: "Deletes a ligne"
+      - "line"
+      summary: "Deletes a line"
       description: ""
-      operationId: "deleteLigne"
+      operationId: "deleteLine"
       produces:
       - "application/xml"
       - "application/json"
@@ -527,21 +560,21 @@ paths:
         in: "header"
         required: false
         type: "string"
-      - name: "ligneId"
+      - name: "lineId"
         in: "path"
-        description: "Ligne id to delete"
+        description: "Line id to delete"
         required: true
         type: "string"
       responses:
         400:
           description: "Invalid ID supplied"
         404:
-          description: "Ligne not found"
+          description: "Line not found"
       security:
       - facturation_auth:
-        - "write:lignes"
-        - "read:lignes"
-      x-swagger-router-controller: "Ligne"
+        - "write:lines"
+        - "read:lines"
+      x-swagger-router-controller: "Line"
   /product:
     post:
       tags:
@@ -714,6 +747,34 @@ paths:
       security:
       - api_key: []
       x-swagger-router-controller: "Products"
+  /invoice/{invoiceId}/lines:
+    get:
+      tags:
+      - "lines"
+      summary: "Find lines"
+      description: "Returns all lines"
+      operationId: "getLines"
+      produces:
+      - "application/xml"
+      - "application/json"
+      parameters:
+      - name: "invoiceId"
+        in: "path"
+        description: "invoice id"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/lines_response_200"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "no line found"
+      security:
+      - api_key: []
+      x-swagger-router-controller: "Lines"
 securityDefinitions:
   facturation_auth:
     type: "oauth2"
@@ -724,8 +785,8 @@ securityDefinitions:
       read:customers: "read your customers"
       write:invoices: "modify invoices in your account"
       read:invoices: "read your invoices"
-      write:lignes: "modify invoices in your account"
-      read:lignes: "read your invoices"
+      write:lines: "modify invoices in your account"
+      read:lines: "read your invoices"
       write:products: "modify invoices in your account"
       read:products: "read your invoices"
   api_key:
@@ -760,7 +821,7 @@ definitions:
         - "edited"
     xml:
       name: "Invoice"
-  Ligne:
+  Line:
     type: "object"
     properties:
       _id:
@@ -769,16 +830,19 @@ definitions:
         type: "string"
       productId:
         type: "string"
+      creation_date:
+        type: "string"
+        format: "date"
       description:
         type: "string"
-      quantite:
+      quantity:
         type: "integer"
         format: "int64"
       price:
         type: "number"
         format: "double"
     xml:
-      name: "Ligne"
+      name: "Line"
   Product:
     type: "object"
     properties:
@@ -838,16 +902,19 @@ definitions:
         type: "string"
       productId:
         type: "string"
+      creation_date:
+        type: "string"
+        format: "date"
       description:
         type: "string"
-      quantite:
+      quantity:
         type: "integer"
         format: "int64"
       price:
         type: "number"
         format: "double"
     xml:
-      name: "Ligne"
+      name: "Line"
   product_response_200:
     properties:
       _id:
@@ -903,6 +970,15 @@ definitions:
           wrapped: true
         items:
           $ref: "#/definitions/Product"
+  lines_response_200:
+    properties:
+      lines:
+        type: "array"
+        xml:
+          name: "Lines"
+          wrapped: true
+        items:
+          $ref: "#/definitions/Line"
   body_invoice:
     type: "object"
     properties:
@@ -935,16 +1011,19 @@ definitions:
         type: "string"
       productId:
         type: "string"
+      creation_date:
+        type: "string"
+        format: "date"
       description:
         type: "string"
-      quantite:
+      quantity:
         type: "integer"
         format: "int64"
       price:
         type: "number"
         format: "double"
     xml:
-      name: "Ligne"
+      name: "Line"
   body_product:
     type: "object"
     properties:
