# FactureManagerAPI/controllers/Lines.js
@@ -1,0 +1,9 @@
+'use strict';
+
+var url = require('url');
+
+var Products = require('./LinesService');
+
+module.exports.getLines = function getLines (req, res, next) {
+  Products.getLines(req.swagger.params, res, next);
+};
